--- a/ss5_thao_tac_orm/exercise/music-player/src/main/webapp/WEB-INF/views/song/add.html
+++ b/ss5_thao_tac_orm/exercise/music-player/src/main/webapp/WEB-INF/views/song/add.html
@@ -7,7 +7,7 @@
 <body>
 <h1>THÊM BÀI HÁT</h1>
 <a href="/">Quay lại</a>
-<form action="/create" method="post" th:object="${song}">
+<form action="/create" method="post" th:object="${song}" enctype="multipart/form-data">
     <div>
         <label>Tên bài hát</label>
         <input type="text" required placeholder="Nhập tên bài hát" th:field="*{name}">
@@ -21,10 +21,9 @@
         <input type="text" required placeholder="Nhập thể loại nhạc" th:field="*{type}">
     </div>
     <div>
-        <label>Đường dẫn</label>
-        <input type="text" required placeholder="Nhập đường dẫn" th:field="*{path}">
+        <label>Tai file len</label>
+        <input type="file" required placeholder="Nhập đường dẫn" th:field="*{audioFile}">
     </div>
-
     <button>Thêm mới</button>
 </form>
 
