--- a/ss7_spring_data_repository/exercise/blog-management-beautiful/src/main/resources/templates/list.html
+++ b/ss7_spring_data_repository/exercise/blog-management-beautiful/src/main/resources/templates/list.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-md-9">
             <!--form tìm kiếm theo Tên blog-->
-            <form action="/" class="w-50" id="searchForm">
+            <form action="/search" class="w-50" id="searchForm">
                 <div class="d-flex mt-5 mb-5">
                     <label class="form-label text-success fw-bold" for="nameSearch">Blog name</label>
                     <input class="form-control mt-2" type="text" name="nameSearch" th:value="${nameSearch}" id="nameSearch"
