--- a/ss8_validation/exercise/web-music1/src/main/resources/templates/list.html
+++ b/ss8_validation/exercise/web-music1/src/main/resources/templates/list.html
@@ -6,9 +6,9 @@
     <th:block th:replace="~{Common::css}"></th:block>
 </head>
 <body>
-<h1>List song</h1>
+<h1 class="text-primary">List song</h1>
 <a href="/add">Add</a>
-<table>
+<table border="1" class="table table-dark table-hover table-striped">
     <thead>
     <tr>
         <th>STT</th>
