--- a/ss9_AOP/exercise/book-management/src/main/resources/templates/bookerror.html
+++ b/ss9_AOP/exercise/book-management/src/main/resources/templates/bookerror.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1>Not Found</h1>
-<a href="/">Quay lại</a>
+<h1 th:text="${mess}"></h1>
+<a href="/">Return</a>
 </body>
 </html>
