--- a/case-study/furama/src/main/resources/templates/common/common.html
+++ b/case-study/furama/src/main/resources/templates/common/common.html
@@ -5,50 +5,54 @@
     <title>Title</title>
 </head>
 <body>
-<div th:fragment="navbar" class="fixed-top" style="margin: 0">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class=" navbar-nav me-auto mb-2 mb-lg-0">
-                    <div class="container" style="width: 60px;height: 60px">
-                        <a class="navbar-brand" href="">
-                            <img class="img-fluid"
-                                 src="https://furamavietnam.com/wp-content/uploads/2018/08/logo@2x.png" alt="">
-                        </a>
+<div  th:fragment="navbar">
+    <div class="fixed-top" style="margin: 0">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class=" navbar-nav me-auto mb-2 mb-lg-0">
+                        <div class="container" style="width: 60px;height: 60px">
+                            <a class="navbar-brand" href="">
+                                <img class="img-fluid"
+                                     src="https://furamavietnam.com/wp-content/uploads/2018/08/logo@2x.png" alt="">
+                            </a>
+                        </div>
+
+                        <li class="nav-item">
+                            <a class="nav-link  fw-bold" href="/employee">Employee</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link  fw-bold" href="/customer" tabindex="-1" aria-disabled="true">Customer</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link  fw-bold" href="/service" tabindex="-1" aria-disabled="true">Service</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link  fw-bold" href="/contract" tabindex="-1" aria-disabled="true">Contract</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex ">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                    <div>
+                        <a href="">Nguyễn Trần Thảo Nhiên</a>
                     </div>
-
-                    <li class="nav-item">
-                        <a class="nav-link  fw-bold" href="">Employee</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link  fw-bold" href="/customer" tabindex="-1" aria-disabled="true">Customer</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link  fw-bold" href="/service" tabindex="-1" aria-disabled="true">Service</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link  fw-bold" href="/contract" tabindex="-1" aria-disabled="true">Contract</a>
-                    </li>
-                </ul>
-                <form class="d-flex ">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-                <div>
-                    <a href="">Nguyễn Trần Thảo Nhiên</a>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
+    <div style="height: 150px"></div>
 </div>
+
 <!-- Footer -->
 <footer th:fragment="footer" class="text-center text-lg-start bg-light text-muted mt-5 p-5">
     <div class="container text-center text-md-start mt-5">
