--- a/case-study/furama/src/main/resources/templates/service/update.html
+++ b/case-study/furama/src/main/resources/templates/service/update.html
@@ -2,16 +2,154 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Update Service</title>
+    <title>Add Service</title>
     <th:block th:replace="~{common/common::css}"></th:block>
 </head>
 <body>
 <!--navbar-->
 <div th:replace="~{common/common::navbar}"></div>
-<h1>Update Service</h1>
 
-<!--Footer-->
+<h4 class="p-3 bg-success text-white text-center">Cập nhật dịch vụ</h4>
+
+<div class="d-flex justify-content-center">
+    <select class="form-select-lg w-50 m-auto mt-3 border-warning rounded-pill" name="" id="addSelect"
+            onchange="displayInputAdd()">
+        <option value="none">Chọn loại dịch vụ</option>
+        <option value="house">Cập nhật House</option>
+        <option value="villa">Cập nhật Villa</option>
+        <option value="room">Cập nhật Room</option>
+    </select>
+</div>
+<div class="d-flex justify-content-center">
+    <form action="" class="text-warning fw-bold bg-light w-75 mt-5 mb-5 shadow-lg p-5">
+        <div class="row">
+            <div class="col-md-6 col-sm-12 ">
+                <div class="mb-3">
+                    <label for="tenDv" class="form-label ">1. Nhập Tên dịch vụ</label>
+                    <input type="text" class="form-control" id="tenDv" aria-describedby="emailHelp"
+                           placeholder="Nhập Tên dịch vụ">
+                </div>
+                <div class="mb-3">
+                    <label for="dienTich" class="form-label ">2. Nhập Diện tích sử dụng</label>
+                    <input type="text" class="form-control" id="dienTich" aria-describedby="emailHelp"
+                           placeholder="Nhập Diện tích">
+                </div>
+                <div class="mb-3">
+                    <label for="chiPhiThue" class="form-label ">3. Nhập chi phí thuê</label>
+                    <input type="text" class="form-control" id="chiPhiThue" aria-describedby="emailHelp"
+                           placeholder="Nhập chi phí thuê">
+                </div>
+                <div class="mb-3">
+                    <label for="soNguoiToiDa" class="form-label ">4. Nhập số người tối đa</label>
+                    <input type="text" class="form-control" id="soNguoiToiDa" aria-describedby="emailHelp"
+                           placeholder="4. Nhập số người tối đa">
+                </div>
+                <div class="mb-3">
+                    <label for="soNguoiToiDa" class="form-label ">5. Nhập kiểu thuê</label>
+                    <select name="kieuThue" id="kieuThue">
+                        <option value="nam">Thuê theo năm</option>
+                        <option value="thang">Thuê theo tháng</option>
+                        <option value="ngay">Thuê theo ngày</option>
+                        <option value="gio">Thuê theo giờ</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12 ">
+                <div class="mb-3 " style="display: none" id="divTieuChuanPhong">
+                    <label for="tieuChuanPhong" class="form-label ">Nhập Tiêu chuẩn phòng</label>
+                    <input type="text" class="form-control" id="tieuChuanPhong" aria-describedby="emailHelp"
+                           placeholder="Nhập Tiêu chuẩn phòng">
+                </div>
+                <div class="mb-3 " style="display: none" id="divTienNghiKhac">
+                    <label for="tienNghiKhac" class="form-label ">Nhập Mô tả tiện nghi khác</label>
+                    <input type="text" class="form-control" id="tienNghiKhac" aria-describedby="emailHelp"
+                           placeholder="Nhập Mô tả tiện nghi khác">
+                </div>
+                <div class="mb-3 " style="display: none" id="divDienTichHoBoi">
+                    <label for="dienTichHoBoi" class="form-label ">Nhập Diện tích hồ bơi</label>
+                    <input type="text" class="form-control" aria-describedby="emailHelp"
+                           placeholder="Nhập Diện tích hồ bơi" id="dienTichHoBoi">
+                </div>
+                <div class="mb-3 " style="display: none" id="divSoTang">
+                    <label for="soTang" class="form-label ">Nhập Số tầng</label>
+                    <input type="text" class="form-control" aria-describedby="emailHelp"
+                           placeholder="Nhập Số tầng" id="soTang">
+                </div>
+                <div class="mb-3 " style="display: none" id="divDichVuMienPhi">
+                    <label for="dichVuMienPhi" class="form-label ">Nhập dịch vụ miễn phí đi kèm</label>
+                    <input type="text" class="form-control" aria-describedby="emailHelp"
+                           placeholder="Nhập dịch vụ miễn phí đi kèm" id="dichVuMienPhi">
+                </div>
+            </div>
+        </div>
+        <div>
+            <a class="btn btn-primary" href="/service">Quay lại</a>
+            <button type="submit" id="update" class="btn btn-warning">Cập nhật</button>
+        </div>
+    </form>
+</div>
 <footer th:replace="~{common/common::footer}"></footer>
+
+<script>
+    window.onload = function () {
+        setStatusSummitBtn(false);
+    }
+    function setStatusSummitBtn(action) {
+        // false => tắt ~ disable
+        // true => bật ~ enable
+        if (action === false) {
+            document.getElementById("update").disabled = true;
+        } else
+            document.getElementById("update").disabled = false;
+    }
+    function displayInputAdd() {
+        let value = document.getElementById("addSelect").value;
+        let divTieuChuanPhong = document.getElementById("divTieuChuanPhong");
+        let divTienNghiKhac = document.getElementById("divTienNghiKhac");
+        let dienTichHoBoi = document.getElementById("divDienTichHoBoi");
+        let divSoTang = document.getElementById("divSoTang");
+        let divDichVuMienPhi = document.getElementById("divDichVuMienPhi");
+        switch (value) {
+            case "none":
+                divTieuChuanPhong.style.display = "none"
+                divTienNghiKhac.style.display = "none"
+                dienTichHoBoi.style.display = "none"
+                divSoTang.style.display = "none"
+                divDichVuMienPhi.style.display = "none"
+                setStatusSummitBtn(false);
+                console.log(0)
+                break;
+            case "villa":
+                divTieuChuanPhong.style.display = "block"
+                divTienNghiKhac.style.display = "block"
+                dienTichHoBoi.style.display = "block"
+                divSoTang.style.display = "block"
+                divDichVuMienPhi.style.display = "none"
+                setStatusSummitBtn(true);
+                console.log(2)
+                break;
+            case "house":
+                divTieuChuanPhong.style.display = "block"
+                divTienNghiKhac.style.display = "block"
+                dienTichHoBoi.style.display = "none"
+                divSoTang.style.display = "block"
+                divDichVuMienPhi.style.display = "none"
+                setStatusSummitBtn(true);
+                console.log(1)
+                break;
+            case "room":
+                divTieuChuanPhong.style.display = "none"
+                divTienNghiKhac.style.display = "none"
+                dienTichHoBoi.style.display = "none"
+                divSoTang.style.display = "none"
+                divDichVuMienPhi.style.display = "block"
+                setStatusSummitBtn(true);
+                console.log(3)
+                break;
+        }
+    }
+</script>
+<!--Footer-->
 <script th:replace="~{common/common::js}"></script>
 </body>
 </html>
