--- a/ss10_session_cookie/exercise/cart/src/main/resources/templates/cart.html
+++ b/ss10_session_cookie/exercise/cart/src/main/resources/templates/cart.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Cart</h1>
+<h1>Giỏ hàng (<span th:text="${itemQuantity}"></span>) <span th></span></h1>
 <a href="/">Quay lại cửa hàng</a>
 <table border="1">
     <thead>
@@ -14,11 +14,13 @@
         <th>Tên sản phẩm</th>
         <th>Giá tiền</th>
         <th>Số Lượng</th>
+        <td>Xóa sản phẩm</td>
     </tr>
     </thead>
     <tbody>
     <tr th:each="product,status:${cart}">
         <td th:text="${status.count}"></td>
+        <td th:text="${product.key.name}"></td>
         <td th:text="${product.key.name}"></td>
         <td th:text="${product.key.price}"></td>
         <td>
@@ -26,9 +28,15 @@
             <span th:text="${product.value}"></span>
             <a th:href="@{/changequantity(id=${product.key.id},expression='-')}">-</a>
         </td>
+        <td><a th:href="@{/removeproduct(id=${product.key.id})}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+            </svg>
+        </a></td>
     </tr>
     </tbody>
 </table>
+<a href="/payOff">Thanh toán</a>
 <p>Tổng tiền: <span th:text="${total}"></span></p>
 </body>
 </html>
